<resources>
    <string name="app_name">悠行</string>
    <string name="title">校内单车租借点</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rent_bike">单车快租</string>
    <string name="buy_bike">单车买卖</string>
    <string name="repair_bike">上门维修</string>
    <string name="more_information">敬请期待</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
